ingress-nginx/foo-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "foo"
  namespace: production

spec:
  rules:
    - host: example.net
      http:
        paths:
          - path: /bar
            backend:
              serviceName: service1
              servicePort: 80
          - path: /foo
            backend:
              serviceName: service2
              servicePort: 80
    - host: example2.net
      http:
        paths:
          - path: /bar
            backend:
              serviceName: service3
              servicePort: 80
          - path: /foo
            backend:
              serviceName: service4
              servicePort: 80
